[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bollard = { version = "0.15.0", features = ["buildkit"] }
clap = { version = "4.4.10", features = ["derive", "env"] }
env_logger = "0.10.1"
flate2 = "1.0.28"
futures-util = "0.3.29"
indicatif = { version = "0.17.7", features = ["tokio"] }
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["stream", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tar = "0.4.40"
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
